fix: separation contents
